force-app/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>ID historique</label>
    <description>Identifiant dans l'ancien fichier Excel. Clé de migration : un rechargement met à jour au lieu de créer un doublon.</description>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>