force-app/main/default/objects/Account/fields/NAF_Code__c.field-meta.xml
<CustomField>
    <fullName>NAF_Code__c</fullName>
    <label>Code NAF</label>
    <description>Activité principale (APE), remplie par l'API Recherche d'entreprises.</description>
    <type>Text</type>
    <length>6</length>
</CustomField>