force-app/main/default/objects/Account/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN</label>
    <description>Identifiant de l'entreprise : les 9 premiers chiffres du SIRET.</description>
    <type>Text</type>
    <formula>LEFT(SIRET__c, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>