force-app/main/default/objects/Account/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <label>SIRET</label>
    <description>Identifiant de l'établissement : 14 chiffres. Unique. Voir D-05, D-06.</description>
    <inlineHelpText>14 chiffres, sans espace. Ex. : 12345678900012</inlineHelpText>
    <type>Text</type>
    <length>14</length>
    <unique>true</unique>
</CustomField>