force-app/main/default/objects/Account/fields/SIRET_Enriched_At__c.field-meta.xml
<CustomField>
    <fullName>SIRET_Enriched_At__c</fullName>
    <label>Enrichi le</label>
    <description>Date et heure du dernier enrichissement depuis l'API Recherche d'entreprises.</description>
    <type>DateTime</type>
</CustomField>