force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <label>N° TVA intracommunautaire</label>
    <description>Format français : FR + 2 caractères de clé + SIREN. Voir D-08.</description>
    <inlineHelpText>Ex. : FR32123456789. Les 9 derniers chiffres doivent correspondre au SIREN.</inlineHelpText>
    <type>Text</type>
    <length>13</length>
</CustomField>