force-app/main/default/objects/Account/validationRules/SIRET_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>SIRET_Format</fullName>
    <active>true</active>
    <description>Le SIRET doit contenir exactement 14 chiffres. Voir D-07.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(SIRET__c)),
        NOT(REGEX(SIRET__c, "[0-9]{14}"))
    )</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>Le SIRET doit contenir exactement 14 chiffres, sans espace ni lettre.</errorMessage>
</ValidationRule>