force-app/main/default/objects/Account/validationRules/SIRET_Required_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>SIRET_Required_On_Create</fullName>
    <active>true</active>
    <description>SIRET obligatoire à la création, sauf pour l'utilisateur de migration (permission Bypass_Validation). Voir D-06.</description>
    <errorConditionFormula>AND(
        ISNEW(),
        ISBLANK(SIRET__c),
        NOT($Permission.Bypass_Validation)
    )</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>Le SIRET est obligatoire pour créer un compte.</errorMessage>
</ValidationRule>